Fixed alignments even more, set video background to black cuz it looks nice

--- a/static/css/game_page.css
+++ b/static/css/game_page.css
@@ -14,6 +14,7 @@
     width:1480px;
     height: 479px;
     margin-bottom: 64px;
+    background-color:black;
 }
 
 .section_all {
